 * When a h2 request carries a ':scheme' pseudoheader, it gives a 400
   response if the scheme does not match the connection. Fixes #230.

v2.0.2
--------------------------------------------------------------------------------
 * When reaching server limits, such as MaxRequestsPerChild, the HTTP/2 connection
   send a GOAWAY frame much too early on new connections, leading to invalid
   protocol state and a client failing the request. See PR65731 at
   <https://bz.apache.org/bugzilla/show_bug.cgi?id=65731>.
   The module now initializes the HTTP/2 protocol correctly and allows the
   client to submit one request before the shutdown via a GOAWAY frame
   is being announced.

v2.0.1
--------------------------------------------------------------------------------
 * Improved information displayed in 'server-status' for H2 connections when
   Extended Status is enabled. Now one can see the last request that IO
   operations happened on and transferred IO stats are updated as well.
 * Fixed a bug that let to an infinite loop in v2.0.0 when the client closed
   the connection.
 * Fixing NULL dereference if server variable SSL_PROTOCOL is unset.
 * Setting DefaultRuntimeDir and PidFile in test configuration to override
   any platform defaults.
 * Disabling pollset use when compiling with APR version < 1.6.0

v2.0.0
--------------------------------------------------------------------------------
 * Fixed input handling for requests without body that nevertheless try
   to read one (e.g. mod_cgid handling) to deliver at least an EOS bucket
   before signalling an EOF.
 * A regression in v1.15.24 was fixed that could lead to httpd child
   processes not being terminated on a graceful reload or when reaching
   MaxConnectionsPerChild. When unprocessed h2 requests were queued at
   the time, these could stall. See #212.
 * Fixed an issue since 1.15.24 that "Server" headers in proxied requests
   were overwritten instead of preserved. [PR by @daum3ns]

v2.0.0-rc4